5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1712_2503.log
== TEST (2019-05-13 15:32:38) 
-- CODE:
n = int(input("numero de termos: "))

c = 0  #contador
d = 1  #denominador
s = -1 #sinal

while c < n:
	p = s * (4 / d)
	if s == -1:
		s = s * s
	else:
		s == s
	c = c + 1
	d = d + 2
print(p)
-- OUTPUT:
0.014760147601476014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:32:58) 
-- CODE:
n = int(input("numero de termos: "))

c = 0  #contador
d = 1  #denominador
s = -1 #sinal

while c < n:
	p = -(s) * (4 / d)
	if s == -1:
		s = s * s
	else:
		s == s
	c = c + 1
	d = d + 2
print(p)
-- OUTPUT:
-0.014760147601476014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:33:22) 
-- CODE:
n = int(input("numero de termos: "))

c = 0  #contador
d = 1  #denominador
s = -1 #sinal

while c < n:
	p = -(s) * (4 / d)
	if s == -1:
		s = s * s
	else:
		s == s
	c = c + 1
	d = d + 2
print(p)
-- OUTPUT:
-0.014760147601476014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:33:26) 
-- CODE:
n = int(input("numero de termos: "))

c = 0  #contador
d = 1  #denominador
s = -1 #sinal

while c < n:
	p = -(s) * (4 / d)
	if s == -1:
		s = s * s
	else:
		s == s
	c = c + 1
	d = d + 2
print(p)
-- OUTPUT:
-0.014760147601476014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:34:20) 
-- CODE:
n = int(input("numero de termos: "))

c = 0  #contador
d = 1  #denominador
s = 1 #sinal

while c < n:
	p = s * (4 / d)
	if s == 1:
		s = -1
	else:
		s == 1
	c = c + 1
	d = d + 2
print(p)
-- OUTPUT:
-0.014760147601476014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:35:02) 
-- CODE:
n = int(input("numero de termos: "))

c = 0  #contador
d = 1  #denominador
s = 1 #sinal

while c < n:
	p = s * (4 / d)
	if s == 1:
		s = -1
	else:
		s = 1
	c = c + 1
	d = d + 2
print(p)
-- OUTPUT:
-0.014760147601476014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:35:28) 
-- CODE:
n = int(input("numero de termos: "))

c = 0  #contador
d = 1  #denominador
s = 1 #sinal

while c < n:
	p = p + (s * (4 / d))
	if s == 1:
		s = -1
	else:
		s = 1
	c = c + 1
	d = d + 2
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    p = p + (s * (4 / d))
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:35:52) 
-- CODE:
n = int(input("numero de termos: "))

c = 0  #contador
d = 1  #denominador
s = 1  #sinal
p = 0  #pi

while c < n:
	p = p + (s * (4 / d))
	if s == 1:
		s = -1
	else:
		s = 1
	c = c + 1
	d = d + 2
print(p)
-- OUTPUT:
3.1342398117921664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:36:11) 
-- CODE:
n = int(input("numero de termos: "))

c = 0  #contador
d = 1  #denominador
s = 1  #sinal
p = 0  #pi

while c < n:
	p = p + (s * (4 / d))
	if s == 1:
		s = -1
	else:
		s = 1
	c = c + 1
	d = d + 2
print(round(p, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:36:16) 
-- CODE:
n = int(input("numero de termos: "))

c = 0  #contador
d = 1  #denominador
s = 1  #sinal
p = 0  #pi

while c < n:
	p = p + (s * (4 / d))
	if s == 1:
		s = -1
	else:
		s = 1
	c = c + 1
	d = d + 2
print(round(p, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:36:21) 
-- CODE:
n = int(input("numero de termos: "))

c = 0  #contador
d = 1  #denominador
s = 1  #sinal
p = 0  #pi

while c < n:
	p = p + (s * (4 / d))
	if s == 1:
		s = -1
	else:
		s = 1
	c = c + 1
	d = d + 2
print(round(p, 8))
-- EXECUTION TIME:
0.15889
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
